--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -57,12 +57,37 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.AOSiPVersionPreferenceController"/>
 
+    <!-- Maintainer string -->
+    <Preference
+	android:key="maintainer"
+	android:title="Who to blame (Maintainer)"
+	android:summary="Mayur Varde"
+	settings:enableCopying="true">
+	<intent
+	   android:action="android.intent.action.VIEW"
+	   android:data="https://t.me/marshmello_61" />
+    </Preference>
+
     <!-- DerpFest build type -->
     <Preference
         android:key="build_type"
         android:title="@string/build_type"
         settings:enableCopying="true"
-        settings:controller="com.android.settings.deviceinfo.firmwareversion.DerpBuildTypePreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.DerpBuildTypePreferenceController">
+	<intent
+	   android:action="android.intent.action.VIEW"
+	   android:data="https://paypal.me/marshmello61" />
+    </Preference>
+
+    <Preference
+        android:key="donate"
+        android:title="Donate"
+        android:summary="It's a good thing to do"
+        settings:enableCopying="true">
+        <intent
+           android:action="android.intent.action.VIEW"
+           android:data="https://paypal.me/marshmello61" />
+    </Preference>
 
     <!-- Changelog -->
     <Preference
